--- a/src/main/resources/templates/boardwrite.html
+++ b/src/main/resources/templates/boardwrite.html
@@ -16,6 +16,13 @@
             <td><input type="text" id="title"></td>
         </tr>
         <tr>
+            <td><select id="category">
+                <option value="자유게시판" selected> 자유게시판 </option>
+                <option value="질문게시판"> 질문게시판 </option>
+                <option value="거래게시판"> 거래게시판 </option>
+            </select></td>
+        </tr>
+        <tr>
             <td>작성자</td>
             <td><input type="text" id="writer"></td>
         </tr>
