--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,11 +9,22 @@
 <body>
 <div class="container my-5">
     <div id="categorybox"></div>
-<table class="table" id="boardtable">
-
-
-</table>
+<table class="table" id="boardtable"></table>
     <a href="/write"><button type="button" class="btn btn-secondary"> 글 쓰기 </button></a>
+
+<ul id="pagebtnbox" class="pagination justify-content-center">
+
+</ul>
+
+
+<div class="justify-content-center">
+    <select id="key">
+        <option value="btitle"> 제목 </option>
+        <option value="bcontent"> 내용 </option>
+    </select>
+    <input type="text" id="keyword">
+    <button type="button" onclick="search()">검색</button>
+</div>
 </div>
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
