--- a/src/main/resources/templates/boardwrite.html
+++ b/src/main/resources/templates/boardwrite.html
@@ -42,6 +42,6 @@
 
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/js/board.js"></script>
+<script src="/js/boardwrite.js"></script>
 </body>
 </html>
